[workspace]
members = [
    "crates/tree-fuzzer",
    "crates/tree-fuzzer-json", 
    "crates/tree-fuzzer-json-splicer", 
    "crates/tree-fuzzer-rust", 
    "crates/tree-fuzzer-json-nautilus", 
    "crates/tree-sifu",
    "crates/tree-fuzzer-rust-splicer",
]

exclude = [ "./crates/tree-fuzzer-json/fuzz" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

resolver = "2"

