[package]
name = "tree-fuzzer-json-nautilus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter-json = "0.20.2"
tree-fuzzer = { path = "../tree-fuzzer" }
# test_serde = { path = "./fuzz" }
libafl = { path = "../../../LibAFL/libafl/", features = ["default", "nautilus"] }
libafl_targets = { path = "../../../LibAFL/libafl_targets", features = ["sancov_pcguard_edges", "sancov_cmplog", "libfuzzer", "libfuzzer_no_link_main"] }
mimalloc = { version = "*", default-features = false }
libafl_bolts = { path =  "../../../LibAFL/libafl_bolts" }
env_logger = "0.11.3"

[lib]
crate-type = [ "staticlib" ]
