[package]
name = "tree-fuzzer-json-splicer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter-json = "0.20.2"
tree-fuzzer = { path = "../tree-fuzzer" }
# test_serde = { path = "./fuzz" }
libafl = "0.11.2"
libafl_targets = { version = "0.11.2", features = ["sancov_pcguard_edges", "sancov_cmplog", "libfuzzer", "libfuzzer_no_link_main"] }
mimalloc = { version = "*", default-features = false }
libafl_bolts = { version = "0.11.2", features = ["errors_backtrace"]}
env_logger = "0.11.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.20"
rand = "0.8"
tree-sitter-edit = "0.3"
serde_derive = "1.0.197"

[lib]
crate-type = [ "staticlib" ]

[profile.release]
debug = true

