[package]
name = "tree-fuzzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# libafl = "0.11.2"
# libafl_bolts = "0.11.2"
# tree-sitter = "0.20"
# clap = { version = "4.5.1", features = ["derive"], optional = false }

[lib]
# crate-type = [ "staticlib"]
