[workspace]

[package]
name = "test_rustc"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
# libfuzzer-sys = "0.4"
tree-fuzzer = { path = "../../tree-fuzzer/" }

[lib]
crate-type = [ "staticlib" ]
name = "test_serde"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false
